syntax = "proto3";
package celestiaapp;

option go_package = "github.com/celestiaorg/celestia-app/x/celestiaapp/types";

// GenesisState defines the capability module's genesis state.
message GenesisState {
}

